# project_cpp_cmake_vscode

./: .gitignore  LICENSE  README.md
project_cpp_mac/: CMakeLists.txt  main.cpp
project_cpp_mac/include/: swap.h
project_cpp_mac/lib/: CMakeLists.txt  swap.h
project_cpp_mac/src/: CMakeLists.txt  swap.cpp
project_cpp_win/: CMakeLists.txt
project_cpp_win/lib/: CMakeLists.txt  swap.cpp
project_cpp_win/src/: CMakeLists.txt  main.cpp
